17728
```
$ sbt console
[info] Loading global plugins from /Users/arya/.sbt/plugins
[info] Set current project to default-47cd72 (in build file:/Users/arya/Dropbox/gtri/code/scala-fp-exercises/movie-review/)
[info] Starting scala interpreter...
[info] 
Welcome to Scala version 2.10.0-RC3 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_37).
Type in expressions to have them evaluated.
Type :help for more information.

scala> import scalaz.Scalaz._
import scalaz.Scalaz._

scala> val add = (i: Int, j: Int) => \{ println(s"add($i,$j)"); i+j \}
add: (Int, Int) => Int = <function2>

scala> add.lift.byName
<console>:12: error: diverging implicit expansion for type scalaz.Applicative[F]
starting with method tuple8Monad in trait TupleInstances1
              add.lift.byName
                  ^

scala> 3
<console>:12: error: diverging implicit expansion for type scalaz.Applicative[F]
starting with method tuple8Monad in trait TupleInstances1
              add.lift.byName
                  ^

scala> 4
<console>:12: error: diverging implicit expansion for type scalaz.Applicative[F]
starting with method tuple8Monad in trait TupleInstances1
              add.lift.byName
                  ^

scala> "broken"
<console>:12: error: diverging implicit expansion for type scalaz.Applicative[F]
starting with method tuple8Monad in trait TupleInstances1
              add.lift.byName
                  ^

scala> :quit
```
